# CodeAccelerate-ZeptoCode

./: '  .baseline-lock  .gitignore  .opencodeignore  .rgignore  AGENTS.md  BASELINE-SUMMARY.txt  CHANGELOG.md  LICENSE  README.md  ollama-session.md  package.json  qwen3-planning-transcript.md  registry.jsonc  wrangler.jsonc
baseline-results/: BASELINE-v1.md  IMPLEMENTATION-REPORT.md  baseline-v1-summary.csv  naga-baseline-v1.json  naga-copilot-baseline-v1.json  naga-free-baseline-v1.json  naga-haiku-baseline-v1.json  naga-haiku-copilot-baseline-v1.json  naga-ollama-baseline-v1.json
docs/prompt-optimization/: execution-dag-spec.md  optimization-system-spec.md  planning-dag-spec.md
files/agents/: autonomous-agent.md  context-insurgent.md  context-scout.md  deep-researcher.md  documentation-expert.md  external-scout.md  headwrench.md  junior-dev.md  tailwrench.md
files/plugins/: constants.ts  (+13 more)
harness/: config.py  judge.py  manifest.yaml  module.py  opencode_client.py  optimize.py  pixi.toml  pyproject.toml  run.py
harness/results/: cpp-demo-fmt-argparse-extension.json  tui-widget-library-cpp.json
optimization-scenarios/: .gitignore  env.sh  optimize.py  pixi.toml
optimization-scenarios/cpp-greenfield-project/: .rgignore  CMakeLists.txt  README.md  manifest.yaml  pixi.toml
optimization-scenarios/cpp-greenfield-project/app/: CMakeLists.txt
scripts/: baseline-measurement.sh  extract-baseline-metrics.ts  generate-baseline-documentation.ts  update-profiles.sh
test/: STRATEGY.md  agent-prompts.ts  e2e-prompts.ts  e2e-runner.ts  manifest.ts  runner.ts  setup.ts
(+106 files in other folders)
